modified HTML and CSS style

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horizon Marketing Website Improvements</title>
+    <title>Horiseon Marketing Website Improvements</title>
 </head>
 
 <body>
-     <header class="header">
+     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,50 +22,50 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
+        </nav>
     </header>
     <div>
         <img src="./assets/images/digital-marketing-meeting.jpg" alt="People in a digital marketing meeting" class="hero">
     </div>
-    <main class="content">
-        <section class="search-engine-optimization">
+    <main>
+        <section id="search-engine-optimization" class="main-section"> 
             <img src="./assets/images/search-engine-optimization.jpg" alt="Notebook and pens showing a Search Engine Optimization plan"    class="float-left" />
-            <h2>Search Engine Optimization</h2>
-            <p>
+                <h2>Search Engine Optimization</h2>
+                <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-            </p>
+                </p>
         </section>
-        <section id="online-reputation-management" class="online-reputation-management">
+        <section id="online-reputation-management" class="main-section">
             <img src="./assets/images/online-reputation-management.jpg" alt="Laptop with graph showing metrics of reputation improving"  class="float-right" />
-            <h2>Online Reputation Management</h2>
-            <p>
+                <h2>Online Reputation Management</h2>
+                <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
-            </p>
+                </p>
         </section>
-        <section id="social-media-marketing" class="social-media-marketing">
+        <section id="social-media-marketing" class="main-section">
             <img src="./assets/images/social-media-marketing.jpg" alt="Group meeting discussing social media strategies"  class="float-left" />
-            <h2>Social Media Marketing</h2>
-            <p>
+                <h2>Social Media Marketing</h2>
+                <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
-            </p>
+                </p>
         </section>
     </main>
-    <aside class="benefits">
-        <div class="benefit-lead">
+    <aside>
+        <div class="benefit-aside">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="pipeline funnel icon showing leads that generate revenue"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div class="benefit-aside">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="lightbulb icon showing a lightbulb moment of brand recognition" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div class="benefit-aside">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="gears icon with dollar signs showing increasing revenue and decreasing costs"/>
             <p>
@@ -73,8 +73,8 @@
             </p>
         </div>
     </aside>
-    <footer class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+    <footer>
+        <h4>Made with ❤️️ by Horiseon</h4> 
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
